--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "uvicorn>=0.20.0",
     "httpx>=0.23.3",
     "pytest>=7.2.1",
+    "Jinja2>=3.1.2",
 ]
 requires-python = ">=3.11"
 license = {text = "MIT"}
