--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "httpx>=0.23.3",
     "pytest>=7.2.1",
     "Jinja2>=3.1.2",
+    "pytailwindcss>=0.1.4",
 ]
 requires-python = ">=3.11"
 license = {text = "MIT"}
