--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
 ]
 dependencies = [
     "fastapi>=0.95.0",
-    "uvicorn>=0.20.0",
+    "uvicorn[standard]>=0.21.1",
     "httpx>=0.23.3",
     "pytest>=7.2.1",
     "Jinja2>=3.1.2",
