--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pytest>=7.2.1",
     "Jinja2>=3.1.2",
     "pytailwindcss>=0.1.4",
+    "tinydb>=4.7.1",
 ]
 requires-python = ">=3.11"
 license = {text = "MIT"}
