--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,3 +6,5 @@ FROM --platform=amd64 mcr.microsoft.com/devcontainers/${IMAGE}
 RUN export DEBIAN_FRONTEND=noninteractive \
     && apt-get update && apt-get install -y xdg-utils \
     && apt-get clean -y && rm -rf /var/lib/apt/lists/*
+
+RUN python -m pip install --upgrade pip
