--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,7 @@ jobs:
             - uses: actions/setup-python@v4
               with:
                     python-version: 3.11
+                    cache: 'pip' # caching pip dependencies
             - name: Running PyTest
               run: |
                 pip install -r requirements.txt
