--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,4 @@ $RECYCLE.BIN/
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 _data.json
+.DS_Store
