chore: update 1 file and create 1 file

--- a/.gitignore
+++ b/.gitignore
@@ -172,10 +172,10 @@ poetry.toml
 .ruff_cache/
 
 ### VisualStudioCode ###
-.vscode/*
+# .vscode/*
 .vscode/settings.json
-.vscode/tasks.json
-.vscode/launch.json
+# .vscode/tasks.json
+# .vscode/launch.json
 .vscode/extensions.json
 .vscode/*.code-snippets
 
