chore: update 1 file and create 1 file

--- a/.gitignore
+++ b/.gitignore
@@ -172,12 +172,12 @@ poetry.toml
 .ruff_cache/
 
 ### VisualStudioCode ###
-.vscode/*
+# .vscode/*
 .vscode/settings.json
-.vscode/tasks.json
-.vscode/launch.json
-.vscode/extensions.json
-.vscode/*.code-snippets
+# .vscode/tasks.json
+# .vscode/launch.json
+# .vscode/extensions.json
+# .vscode/*.code-snippets
 
 # Local History for Visual Studio Code
 .history/
