chore: update 1 file and delete 2 files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,python
 
+az_config.sh
+build.sh
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
